--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 <div class="container">
 <h1>Chuck Severance's Resume Registry</h1>
-<p><a href="pages/login.php">Please log in</a></p>
+<p><a href="Salmafassi.github.io/blob/main/pages/login.php">Please log in</a></p>
 </div>
 </body>
 </html>
